--- a/VideoMamba_jupyter.ipynb
+++ b/VideoMamba_jupyter.ipynb
@@ -21,10 +21,7 @@
         "!git clone -b dev https://github.com/camenduru/VideoMamba-hf\n",
         "%cd /content/VideoMamba-hf\n",
         "!pip install gradio==3.50.2\n",
-        "\n",
-        "!wget https://huggingface.co/spaces/OpenGVLab/VideoMamba/resolve/main/causal_conv1d-1.0.0-cp310-cp310-linux_x86_64.whl -O /content/VideoMamba-hf/causal_conv1d-1.0.0-cp310-cp310-linux_x86_64.whl\n",
-        "!wget https://huggingface.co/spaces/OpenGVLab/VideoMamba/resolve/main/mamba_ssm-1.0.1-cp310-cp310-linux_x86_64.whl -O /content/VideoMamba-hf/mamba_ssm-1.0.1-cp310-cp310-linux_x86_64.whl\n",
-        "\n",
+        "!pip install https://github.com/camenduru/wheels/releases/download/colab2/causal_conv1d-1.0.0-cp310-cp310-linux_x86_64.whl\n",
         "!python app.py"
       ]
     }
