--- a/VideoMamba_jupyter.ipynb
+++ b/VideoMamba_jupyter.ipynb
@@ -29,11 +29,12 @@
         "# !git checkout v1.0.0\n",
         "# !CAUSAL_CONV1D_FORCE_BUILD=TRUE pip wheel .\n",
         "\n",
-        "%cd /content\n",
-        "!git clone https://github.com/state-spaces/mamba\n",
-        "%cd /content/mamba\n",
-        "!git checkout v1.0.1\n",
-        "!CAUSAL_CONV1D_FORCE_BUILD=TRUE pip wheel .\n",
+        "!pip install https://github.com/camenduru/wheels/releases/download/colab2/mamba_ssm-1.0.1-cp310-cp310-linux_x86_64.whl\n",
+        "# %cd /content\n",
+        "# !git clone https://github.com/state-spaces/mamba\n",
+        "# %cd /content/mamba\n",
+        "# !git checkout v1.0.1\n",
+        "# !CAUSAL_CONV1D_FORCE_BUILD=TRUE pip wheel .\n",
         "\n",
         "!python app.py"
       ]
