--- a/VideoMamba_jupyter.ipynb
+++ b/VideoMamba_jupyter.ipynb
@@ -18,11 +18,21 @@
       "outputs": [],
       "source": [
         "%cd /content\n",
+        "!git clone -b v1.0.0 https://github.com/Dao-AILab/causal-conv1d\n",
+        "%cd /content/causal-conv1d\n",
+        "!CAUSAL_CONV1D_FORCE_BUILD=TRUE pip wheel .\n",
+        "!pip install /content/causal-conv1d/causal_conv1d-1.0.0-cp310-cp310-linux_x86_64.whl\n",
+        "\n",
+        "%cd /content\n",
+        "!git clone -b v1.0.1 https://github.com/state-spaces/mamba\n",
+        "%cd /content/mamba\n",
+        "!CAUSAL_CONV1D_FORCE_BUILD=TRUE pip wheel -v .\n",
+        "!pip install /content/mamba/mamba_ssm-1.0.1-cp310-cp310-linux_x86_64.whl\n",
+        "\n",
+        "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/VideoMamba-hf\n",
         "%cd /content/VideoMamba-hf\n",
-        "!pip install gradio==3.50.2 decord einops timm ninja\n",
-        "!pip install https://github.com/camenduru/wheels/releases/download/colab2/causal_conv1d-1.0.0-cp310-cp310-linux_x86_64.whl\n",
-        "!pip install https://github.com/camenduru/wheels/releases/download/colab2/mamba_ssm-1.0.1-cp310-cp310-linux_x86_64.whl\n",
+        "!pip install gradio==3.50.2 decord einops timm\n",
         "!python app.py"
       ]
     }
